[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wpscan-tui"
version = "0.1.0"
description = "Textual TUI wrapper around WPScan"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Chaos Tic"}]
requires-python = ">=3.10"
dependencies = [
  "textual>=0.58,<0.70",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
wpscan-tui = "wpscan_tui.app:run"
